# Boidventure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  boid.cpp  boid.hpp  boids.test.cpp  coesion.cpp  coesion.hpp  coesion2.cpp  coesion2.hpp  coesion2.test.cpp  constants.hpp  gui.cpp  gui.hpp  main.cpp  point.cpp  point.hpp  quadtree.cpp  quadtree.hpp  sfml.cpp  sfml.hpp  statistics.cpp  statistics.hpp  swarm.cpp  swarm.hpp
progetto fatto male/: main.cpp  progetto  progetto.cpp  swarm.cpp  swarm.hpp
source/: boid.cpp  boid.hpp  boids.test.cpp  constants.hpp  gui.cpp  gui.hpp  main.cpp  point.hpp  quadtree.cpp  quadtree.hpp  sfml.cpp  sfml.hpp  statistics.cpp  statistics.hpp
source/statistics/: statistics_main.cpp
source/test/: boids.test.cpp
